fix overflow on small screens

--- a/Resources/Private/Styles/frontend.scss
+++ b/Resources/Private/Styles/frontend.scss
@@ -278,6 +278,12 @@ footer {
   margin-top: 50px;
 }
 
+@media (max-width: 768px) {
+   #socialmedia {
+      overflow: hidden;
+   }
+}
+
 @media (min-width: 768px) {
   .affix {
     width: 212px;
